--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,15 @@ h1 {
 }
 
 .containerSmall {
-    margin: 0 27%;
+    margin: 0 28%;
+    padding-bottom: 1.5rem;
 }
 
 nav {
     background-color: var(--bgNav);
     padding: 1rem 1rem;
     color: var(--navText);
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 .navItems {
@@ -67,7 +68,7 @@ nav {
     color: var(--navDarkText);
     font-weight: 300;
     background-color: var(--bgNavButton);
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 0.3rem 0.6rem;
 }
 
@@ -75,7 +76,7 @@ nav {
     color: var(--navText);
     font-weight: 300;
     background-color: var(--bgDarkNavButton);
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 0.3rem 0.6rem;
 }
 
@@ -84,8 +85,14 @@ nav {
     background-size: cover;
     background-repeat: no-repeat;
     height: 42rem;
+    color: var(--navText);
 }
 
 h2 {
-    margin: 5rem 0 2rem;
+    margin: 13rem 0 2rem;
+    font-size: 3rem;
+}
+
+.dFlexCenter a {
+    margin: 0 1rem;
 }
